--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,18 +8,19 @@
 
 </div>
 <div class="container">
-  <div class="row text-center">
-    <div class="col-md-6">
+  <div class="row">
+    <div class="col-md-12">
       <br>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
 
         <div class="form-group">
-          <%= f.email_field :email, autofocus: true, :placeholder => "Correo Electrónico", :class => "form-control" %>
+          <%= f.text_field :username, autofocus: true, :placeholder => "Usuario", :class => "form-control" %>
         </div>
-
         <div class="form-group">
-
+          <%= f.email_field :email, :placeholder => "Correo Electrónico", :class => "form-control" %>
+        </div>
+        <div class="form-group">
           <%= f.password_field :password, autocomplete: "off", :placeholder => "Contraseña (#{@minimum_password_length} carácteres min)", :class => "form-control"  %>
         </div>
 
@@ -28,7 +29,7 @@
         </div>
 
         <div class="actions">
-          <%= f.submit "Enviar", :class => "btn-xl btn-primary" %>
+          <%= f.submit "Enviar", :class => "btn btn-xl btn-inverse  " %>
         </div>
       <% end %>
       <br>
