--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,16 @@
 <!-- Header -->
 
 <header>
-  <div class="intro-text">
-    <div class="intro-heading">Video Web y VR.</div>
-    <div class="intro-lead-in">La siguiente forma de entretenimiento.</div>
-    <a href="#projects" class="page-scroll btn btn-xl">Conoce más</a>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="intro-text">
+          <div class="intro-heading">Video Web y VR.</div>
+          <div class="intro-lead-in">La siguiente forma de entretenimiento.</div>
+          <a href="#projects" class="page-scroll btn btn-xl">Conoce más</a>
+        </div>
+      </div>
+    </div>
   </div>
 </header>
 
@@ -79,65 +85,15 @@
   </div>
 </section-->
 
-<!--section id="services">
+<!-- Blog/News Section -->
+<!--section id="blog">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Servicios</h2>
-        <h3 class="section-subheading normal-text">La mejor posible calidad de entrega en cada uno.</h3>
-      </div>
-    </div>
     <div class="row text-center">
-      <div class="col-md-4 col-sm-4">
-        <span class="fa-stack fa-4x">
-        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-        <i class="fa fa-cloud fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Transmisiones en Vivo</h4>
-        <p class="subtext-muted">Ingestión de Streams. Transcoding. Transrating. Generación de Manifiestos. Uso de multiples CDNs. Balanceo de Cargas. Bitrates Adaptivo. Soporte de multiples protocolos HTTP. </p>
-        <p class="bold-text">Todo en la nube.</p>
-        <ul class="list-unstyled quicklinks">
-          <li>Captura e Ingestión</li>
-          <li>Procesamiento</li>
-          <li>Distribución</li>
-        </ul>
-        <br/>
-        
-        <br/><br/>
+      <div class="col-xs-6 col-lg-6 col-md-6">
+        <h2>Blog</h2>
       </div>
-      <div class="col-md-4 col-sm-4">
-        <span class="fa-stack fa-4x">
-        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-        <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Plataformas de Distribución</h4>
-        <p class="subtext-muted">Manejo de usuarios. Administración de Pagos. Creación de Pagos-Por-Evento y Subscripciones. Integración Continua. Flujos de trabajo transparentes.</p>
-        <p class="bold-text">Para cualquier audiencia.</p>
-        <ul class="list-unstyled quicklinks">
-          <a href="#/partners"><li>- 360/VR</li></a>
-          <a href="#/blog"><li>- OTT</li></a>
-          <a href="#/press"><li>- iOS/Android</li></a>
-        </ul>
-        <br/>
-        <a class="readmore-link" href="">Leer más..</a>
-        <br/><br/>
-      </div>
-      <div class="col-md-4 col-sm-4">
-        <span class="fa-stack fa-4x">
-        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-        <i class="fa fa-eye fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Experiencias en VR y AR</h4>
-        <p class="subtext-muted">Experimentos en 3D/VR. Creación de experiencias únicas. Implementación de Realidad Aumentada para empresas. Activaciones comerciales. Videojuegos.</p>
-        <p class="bold-text">Expertos en desarrollo.</p>
-        <ul class="list-unstyled quicklinks">
-          <a href="#/partners"><li>- HTC Vive</li></a>
-          <a href="#/blog"><li>- Samsung Gear VR</li></a>
-          <a href="#/press"><li>- Google Cardboard</li></a>
-        </ul>
-        <br/>
-        <a class="readmore-link" href="">Leer más..</a>
-        <br/><br/>
+      <div class="col-xs-6 col-lg-6 col-md-6">
+        <h2>Noticias</h2>
       </div>
     </div>
   </div>
