--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,4 +1,3 @@
-<hr>
 <footer>
   <div class="container">
     <div class="row">
@@ -32,22 +31,44 @@
     </div>
     <br/>
     <div class="row">
-      <div class="col-md-4 col-sm-4">
+      <div class="col-md-3 col-sm-3">
         <span class="copyright">VR3 © 2017 | <strong>CGL SAPI de CV </strong></span>
       </div>
-      <div class="col-md-4 col-sm-4">
+      <div class="col-md-3 col-sm-3">
         <ul class="list-inline social-buttons">
-          <li><a href="http://twitter.com/vr3io" target="_blank"><i class="fa fa-twitter"></i></a>
+          <li>
+          <a href="http://twitter.com/vr3io" target="_blank"><i class="fa fa-twitter"></i></a>
           </li>
-          <li><a href="http://facebook.com/vr3io" target="_blank"><i class="fa fa-facebook"></i></a>
+          <li>
+          <a href="http://facebook.com/vr3io" target="_blank"><i class="fa fa-facebook"></i></a>
           </li>
-          <li><a href="http://instagram.com/vr3io" target="_blank"><i class="fa fa-instagram"></i></a>
+          <li>
+          <a href="http://instagram.com/vr3io" target="_blank"><i class="fa fa-instagram"></i></a>
           </li>
         </ul>
       </div>
-      <div class="col-md-4 col-sm-4">
+      <div class="col-md-3 col-sm-3">
         <ul class="list-inline quicklinks">
-          <li><a href="/privacy">Aviso de Privacidad y Términos de Uso</a></li>
+          <li><a href="/privacy">Privacidad y Términos de Uso</a></li>
+        </ul>
+      </div>
+      <div class="col-md-3 col-sm-3">
+        <ul class="list-inline quicklinks">
+          <% if !user_signed_in? %>
+            <li>
+              <%= link_to "login", new_user_session_path %>
+            </li>
+            <!--li>
+              <%= link_to "register", new_user_registration_path%>
+            </li-->
+          <% else %>
+            <li>
+              <%= link_to(current_user.username, edit_user_registration_path) %>
+            </li>
+            <li>
+              <%= link_to("logout", destroy_user_session_path, :method => :delete) %>
+            </li>
+          <% end %>
         </ul>
       </div>
     </div>
