--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -17,13 +17,13 @@
         <li class="hidden">
           <a href="#page-top"></a>
         </li>
-        <li >
+        <!--li>
           <a href="/services">Servicios</a>
-        </li>
-        <li class="">
+        </li-->
+        <li>
           <%= link_to "Clientes", root_path(:anchor => "clients") %>
         </li>
-        <li class="">
+        <li>
           <%= link_to "Proyectos", root_path(:anchor => "projects") %>
         </li>
         <li>
@@ -32,6 +32,11 @@
         <li>
           <a href="/company">Empresa</a>
         </li>
+        <% if user_signed_in? %>
+          <li>
+            <%= link_to("Nuevo Proyecto", new_project_path , :class=>"btn btn-danger") %>
+          </li>
+        <% end %>
         <!--li class="dropdown">
           <a href="/company" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Empresa <span class="caret"></span></a>
           <ul class="dropdown-menu">
