--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -273,41 +273,36 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12 col-sm-12">
-        <form action="vr3.io/php/contact.php" method="post" class="validate" target="_blank" novalidate role="form" id="contactForm">
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-              <div class="form-group">
-                <input type="text" name="name" class="form-control" placeholder="Nombre" id="name" required="" data-validation-required-message="Porfavor escribe tu nombre completo.">
-                <p class="help-block text-danger list-unstyled"></p>
-              </div>
-              <div class="form-group">
-                <input type="email" name="email" class="form-control" placeholder="Email" id="email" required="" data-validation-required-message="Porfavor escribe tu correo electrónico.">
-                <p class="help-block text-danger"></p>
-              </div>
-              <div class="form-group">
-                <textarea type="text" name="message" class="form-control" placeholder="Mensaje" id="email" required="" data-validation-required-message="Porfavor escribe tu mensaje."></textarea> 
-                <p class="help-block text-danger"></p>
-              </div>
-              
-               <div class="checkbox">
-                <label>
-                  <input type="checkbox"> <p class="normal-text-white">Al enviar esta forma aceptas el <a href="/privacy" style="color: #FFBDBE;">Aviso de Privacidad y Términos de Uso</a></p>
-                </label>
-              </div>        
-              <div class="g-recaptcha" data-sitekey="6Ld6AR8TAAAAACju2U8T7UsQNRq_GadUYw9HOXnk"></div>
-              <br/>
+      <form method="post" role="form" id="contact-form" action="http://vectorthree.com/vr3/php/contact.php">
+          <div class="col-md-6 col-md-offset-3">
+            <div class="form-group">
+              <input type="text" name="name" class="form-control" placeholder="Nombre" id="name" required>
+              <p class="help-block text-danger list-unstyled"></p>
             </div>
-            <div class="col-md-6 col-md-offset-3">
-              <div id="success"></div>
-              <div id="error"></div>
+            <div class="form-group">
+              <input type="email" name="email" class="form-control" placeholder="Email" id="email" required>
             </div>
-            <div class="col-sm-12 text-center">
-              <button type="submit" class="btn btn-xl">Enviar</button>
+            <div class="form-group">
+              <textarea type="text" name="message" class="form-control" placeholder="Mensaje" id="message" required></textarea> 
+            </div>
+             <div class="checkbox" id="legal-checkbox">
+              <label id="legal-checkbox">
+                <input type="checkbox" id="legal-checkbox"> <p class="normal-text-white">Al enviar esta forma aceptas el <a href="http://vr3.io/privacy" style="color: #FFBDBE;">Aviso de Privacidad y Términos de Uso</a></p>
+              </label>
+            </div>        
+            <div class="g-recaptcha" data-sitekey="6Ld6AR8TAAAAACju2U8T7UsQNRq_GadUYw9HOXnk"></div>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="alert alert-info" id="contact-form-message">
+              <p id="contact-form-message-text"></p>
             </div>
           </div>
-        </form>
-      </div>
+          <div class="col-sm-12 text-center">
+            <button type="submit" class="btn btn-xl">Enviar</button>
+          </div>
+      </form>
     </div>
   </div>
 </section>
+
+
