--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -56,17 +56,17 @@
         <ul class="list-inline quicklinks">
           <% if !user_signed_in? %>
             <li>
-              <%= link_to "login", new_user_session_path %>
+              <%= link_to "Login", new_user_session_path, :class => "active" %>
             </li>
             <!--li>
               <%= link_to "register", new_user_registration_path%>
             </li-->
           <% else %>
             <li>
-              <%= link_to(current_user.username, edit_user_registration_path) %>
+              <%= link_to(current_user.username, edit_user_registration_path,  :class => "active") %>
             </li>
             <li>
-              <%= link_to("logout", destroy_user_session_path, :method => :delete) %>
+              <%= link_to("logout", destroy_user_session_path, :method => :delete,  :class => "active") %>
             </li>
           <% end %>
         </ul>
