Contact from works properly now.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -285,9 +285,9 @@
             <div class="form-group">
               <textarea type="text" name="message" class="form-control" placeholder="Mensaje" id="message" required></textarea> 
             </div>
-             <div class="checkbox" id="legal-checkbox">
-              <label id="legal-checkbox">
-                <input type="checkbox" id="legal-checkbox"> <p class="normal-text-white">Al enviar esta forma aceptas el <a href="http://vr3.io/privacy" style="color: #FFBDBE;">Aviso de Privacidad y Términos de Uso</a></p>
+             <div class="checkbox">
+              <label>
+                <input type="checkbox" name="legalCheckbox" id="legal-checkbox"><p class="normal-text-white">Al enviar esta forma aceptas el <a href="http://vr3.io/privacy" style="color: #FFBDBE;">Aviso de Privacidad y Términos de Uso</a></p>
               </label>
             </div>        
             <div class="g-recaptcha" data-sitekey="6Ld6AR8TAAAAACju2U8T7UsQNRq_GadUYw9HOXnk"></div>
