--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -9,15 +9,17 @@
 <div class="container">
 	<div class="row text-center">
 		<h3>Compañia</h3>
-		<div class="text-center b io">
-			<p><strong><%= link_to "VR3", root_path %></strong> es un startup de Realidad Virtual en la Ciudad de México.</p>
+		<div class="bio">
+			<h5><strong><%= link_to "VR3", root_path %></strong> es un startup de Realidad Virtual en la Ciudad de México.</h5>
+      <br>
 			<p>Creamos experiencias interactivas para agencias, publicidad, mercadotecnia, casas productoras y cualquier 
 			empresa, compañía o particular interesado.</p>
 			<p>VR3 nació como <strong>Vectorthree</strong>. Imaginado en una clase de videojuegos hace más de 4 años, Vectorthree fue formado por Oscar Chavez, Patrick Moss y Roberto Ramos, tres estudiantes del ITESM CCM, bajo el nombre legal de <strong>CG Logística SAPI de CV</strong>. 
 			Así como también fundamos <strong><a href="mxvr.co" target="_blank">MXVR</a></strong>, una comunidad abierta a todo el público sobre Realidad Virtual.</p>
 		</div>
+    <br>
 		<!--Oscar Chavez-->
-		<div class="col-sm-4 col-md-6 ">
+		<div class="col-sm-6 col-md-6">
 			<%= image_tag "company/oscar.png", class: "img-responsive img-circle", style: "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Oscar Chavez</h3>
 			<h5>Cofundador & CEO</h5>
@@ -32,7 +34,7 @@
       </ul>
 		</div>
 		<!--Patrick Moss-->
-		<div class="col-sm-4 col-md-6">
+		<div class="col-sm-6 col-md-6">
 			<%= image_tag "company/patrick.png", :class => "img-responsive img-circle", :style => "max-width: 50%; transform:translate(50%,0)" %>
 			<h3>Patrick Moss</h3>
 			<h5>Cofundador & CTO</h5>
@@ -59,3 +61,4 @@
 		</div>
 	</div-->
 </div>
+<hr>
