--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,11 @@
-<!-- Header -->
+<!--Video-->
+<!--div class="videoContainer">
+  <video autoplay loop muted>
+    <source src="http://vectorthree.com/vr3/img/main/vr3.webm" type="video/webm" autoplay muted loop>
+  </video>
+</div-->
 
+<!-- Header -->
 <header>
   <div class="container">
     <div class="row">
@@ -13,20 +19,6 @@
     </div>
   </div>
 </header>
-
-<!--div class="videoContainer">
-  <div class="overlay">
-    <div class="intro-text">
-      <div class="intro-heading">Video y VR en Vivo.</div>
-      <div class="intro-lead-in">Esta es la siguiente forma de entretenimiento.</div>
-      <a href="#projects" class="page-scroll btn btn-xl">Conoce más</a>
-    </div>
-  </div>
-  <video autoplay loop muted>
-      <source src="http://vectorthree.com/vr3/img/main/vr3.mp4" type="video/mp4" autoplay muted loop>
-      <source src="http://vectorthree.com/vr3/img/main/vr3.webm" type="video/webm" autoplay muted loop>
-  </video>
-</div-->
 
 <!-- Beta Section >
 <section id="subscribe" class="bg-darkest-gray">
@@ -260,48 +252,6 @@
       <% end %>
     </div>
     <br/>
-  </div>
-</section>
-<!-- Contact Section -->
-<section id="contact">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Contacto</h2>
-        <h3 class="section-subheading text-subtitle-white">Escríbenos aquí, o mándanos un correo a <a href="mailto:info@vr3.io" style="color: #FFBDBE;">info@vr3.io</a></h3>
-        <br/>
-      </div>
-    </div>
-    <div class="row">
-      <form method="post" role="form" id="contact-form" action="http://vectorthree.com/vr3/php/contact.php">
-          <div class="col-md-6 col-md-offset-3">
-            <div class="form-group">
-              <input type="text" name="name" class="form-control" placeholder="Nombre" id="name" required>
-              <p class="help-block text-danger list-unstyled"></p>
-            </div>
-            <div class="form-group">
-              <input type="email" name="email" class="form-control" placeholder="Email" id="email" required>
-            </div>
-            <div class="form-group">
-              <textarea type="text" name="message" class="form-control" placeholder="Mensaje" id="message" required></textarea> 
-            </div>
-             <div class="checkbox">
-              <label>
-                <input type="checkbox" name="legalCheckbox" id="legal-checkbox"><p class="normal-text-white">Al enviar esta forma aceptas el <a href="http://vr3.io/privacy" style="color: #FFBDBE;">Aviso de Privacidad y Términos de Uso</a></p>
-              </label>
-            </div>        
-            <div class="g-recaptcha" data-sitekey="6Ld6AR8TAAAAACju2U8T7UsQNRq_GadUYw9HOXnk"></div>
-          </div>
-          <div class="col-md-6 col-md-offset-3">
-            <div class="alert alert-info" id="contact-form-message">
-              <p id="contact-form-message-text"></p>
-            </div>
-          </div>
-          <div class="col-sm-12 text-center">
-            <button type="submit" class="btn btn-xl">Enviar</button>
-          </div>
-      </form>
-    </div>
   </div>
 </section>
 
