--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -13,18 +13,18 @@
       <div class="col-md-4 col-sm-4">
         <h3>SERVICIOS</h3>
         <ul class="list-unstyled quicklinks">
-          <a href="/services#live"><li>Streaming en Vivo / VOD</li></a>
-          <a href="/services#development"><li>Desarrollo de VR y AR</li></a>
-          <a href="/services#equipement"><li>Renta de Equipo</li></a>
-          <a href="/services#marketing"><li>Activaciones Comerciales</li></a>
+          <a href="/services#streaming"><li>Streaming Web y VR</li></a>
+          <a href="/services#vr"><li>Desarrollo de VR</li></a>
+          <a href="/services#ar"><li>Desarrollo de AR</li></a>
+          <a href="/services#commercial"><li>Renta y Activaciones Comerciales</li></a>
         </ul>
       </div>
       <div class="col-md-4 col-sm-4">
       <h3>COMUNIDAD</h3>
         <ul class="list-unstyled quicklinks">
           <a href="http://mxvr.co" target="_blank"><li>MXVR</li></a>
-          <a href="http://shop.vr3.io"><li>Tienda</li></a>
-          <a href="http://blog.vr3.io"><li>Blog</li></a>
+          <!--a href="http://shop.vr3.io" target="_blank"><li>Tienda</li></a-->
+          <a href="http://blog.vr3.io" target="_blank"><li>Blog</li></a>
           <a href="/press"><li>Prensa</li></a>
         </ul>     
       </div>
