--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -10,7 +10,7 @@ body {
   font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 .bio{
-  padding: 30px; 
+  padding: 15px; 
 }
 
 video{
@@ -502,16 +502,6 @@ div#full-blue{
     position: relative;
     z-index: 1;
 }
-.videoContainer .overlay {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 2;
-    background-image: linear-gradient(to bottom right, #EB3349, #F45C43);
-    opacity: 0.85;
-}
 
 header {
   text-align: center;
@@ -525,7 +515,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   .intro-text {
-    padding-top: 150px;
+    padding-top: 10px;
     padding-bottom: 100px;
     .intro-lead-in {
       margin-bottom: 25px;
@@ -708,6 +698,16 @@ section {
   #portfolio .portfolio-item {
     margin: 0 0 30px;
   }
+}
+
+select:required:invalid {
+  color: #999999;
+}
+option[value=""][disabled] {
+  display: none;
+}
+option {
+  color: black;
 }
 
 section {
