Added shrinking navbar support, updated projects index/show, included html video support

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Soluciones de Video Web y VR, Encoding y Hosting en la nube, Distribución Multiplatforma, 360\VR, OTT, DRM, Manejo de Pagos, Análisis y Métricas, Renta y Venta de Equipo Especializado">
+    <meta name="description" content="Soluciones de Video Web y VR, Desarrollo de VR/AR, Aplicaciones, Headsets, Encoding y Hosting en la nube, 360\VR, Manejo de Pagos, Análisis y Métricas, Renta y Venta de Equipo Especializado">
+    <meta name="keywords" content="video, web, vr, ar, webvr, hmd, headsets, encoding, streaming, vod, 360, video 360, pagos, transmisiones, transmision en vivo, vr live, vr en vivo">
     <meta name="author" content="info@vr3.io">
     <title>VR3 | Video Web y VR</title>
     <!--Open Graph Protocol-->
@@ -14,7 +15,7 @@
     <meta property="og:site_name" content="VR3 Technologies" />
     <meta property="og:type" content="image"/>
     <meta property="og:url" content="http://vr3.io" />
-    <meta property="og:image" content="http://www.vr3.io/media/img/og_vr3.png" />
+    <meta property="og:image" content="http://www.vectorthree.com/vr3/img/main/vr3banner.jpg" />
 
     <!--reCAPTCHA-->
     <script src='https://www.google.com/recaptcha/api.js'></script>
@@ -49,26 +50,16 @@
 
   <body id="page-top" class="index">
     <%= yield %>
-    <%= render partial: "partials/contact" %>
   </body>
 
   <%= render partial: "partials/footer" %>
 
 
 </html>
-<!--script>
-  $(window).scroll(function(){
-    var scroll = $(window).scrollTop(); // scroll gets 0 from the top value
-    var height = 600; //this will determine when does the header has to switch
-    
-    if(scroll >= height){
-      $("nav").addClass("navbar-shrink")
-    } else if(scroll < height){
-      $("nav").removeClass("navbar-shrink")
-    }  
-  });
-  </script-->
+
+
 <!--
+
   WHAT IS IT EXACTLY THAT YOU ARE LOOKING FOR?
   
   MAYBE THIS?:
@@ -84,7 +75,10 @@
   ............\..............( 
   ..............\.............\...
   
-  >:)
+  >:) just kidding... 
+
+  // CONTACT ME FOR A PRIZE: oscar@vr3.io
+  // KEYWORD: osking
   
   -->
 
