--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -4,9 +4,8 @@
       <div class="col-md-4 col-sm-4">
         <h3>EMPRESA</h3>
         <ul class="list-unstyled quicklinks">
-          <a href="/company"><li>Quienes Somos</li></a>
-          <a href="http://blog.vr3.io"><li>Noticias y Eventos</li></a>
-          <a href="/jobs"><li>Trabajo</li></a>
+          <a href="/company"><li>Empresa</li></a>
+          <a href="/jobs"><li>Trabaja en VR3</li></a>
           <%= link_to "Contacto", root_path(:anchor => "contact") %>
         </ul>
       </div>
@@ -14,8 +13,8 @@
         <h3>SERVICIOS</h3>
         <ul class="list-unstyled quicklinks">
           <a href="/services#streaming"><li>Streaming Web y VR</li></a>
-          <a href="/services#vr"><li>Desarrollo de VR</li></a>
-          <a href="/services#ar"><li>Desarrollo de AR</li></a>
+          <a href="/services#vr"><li>Realidad Virtual</li></a>
+          <a href="/services#ar"><li>Realidad Aumentada</li></a>
           <a href="/services#commercial"><li>Renta y Activaciones Comerciales</li></a>
         </ul>
       </div>
@@ -25,7 +24,7 @@
           <a href="http://mxvr.co" target="_blank"><li>MXVR</li></a>
           <!--a href="http://shop.vr3.io" target="_blank"><li>Tienda</li></a-->
           <a href="http://blog.vr3.io" target="_blank"><li>Blog</li></a>
-          <a href="/press"><li>Prensa</li></a>
+          <!--a href="/press"><li>Prensa</li></a-->
         </ul>     
       </div>
     </div>
