--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,74 +1,106 @@
-<!--header>
+<div id="projectspage"></div>
+
+<div id="full-blue">
   <div class="container">
     <div class="intro-text">
-      <div class="intro-heading"><u><%= @project.title %></u></div>
+    	<div class="intro-heading">Proyectos</div>
     </div>
   </div>
-</header-->
+</div>
+<br>
+<div class="row">
+	<div class="container">
+		<div class="col-lg-12 col-md-12">
+			<video controls muted autoplay>
+			  <source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
+			  <source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/video.webm" type="video/webm">
+				Your browser does not support the video tag.
+			</video>
+		</div>
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-	<ol class="carousel-indicators">
-		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-	</ol>
-
-	<!-- Wrapper for slides -->
-	<div class="carousel-inner" role="listbox">            
-
-		<div class="item active">
-			<div align="center">
-
-				<video autoplay muted loop>
-					<source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/v1.mp4" width="1024" height="552" type="video/mp4">
-						Your browser does not support the video tag.
-				</video>
-			</div>
-			<div class="carousel-caption">
-				<h3><u><%= @project.title %></u></h3>
-				<h4>Cliente: <%= link_to(@project.client, "http://#{@project.client}.com") %></h4>
-				<% if @project.provider %>
-					<h4>Agencia: <%= link_to(@project.provider, "http://#{@project.provider}.com") %></h4>
-				<% else %>
-				<% end %>
-				<p><%= @project.description %></p>
-			</div>
-		</div> 
-		<div class="item">
-			<div align="center">
-				<video autoplay muted loop>
-					<source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/v2.mp4" width="1024" height="552" type="video/mp4">
-						Your browser does not support the video tag.
-				</video>
-			</div>
-			<div class="carousel-caption">
-				<h3><u><%= @project.title %></u></h3>
-				<h4>Cliente: <%= link_to(@project.client, "http://#{@project.client}.com") %></h4>
-				<!--h4>Agencia: <%= link_to(@project.provider, "http://#{@project.provider}.com") %></h4-->
-				<p><%= @project.description %></p>
+		<div class="col-lg-12 col-md-12">
+			<div class="panel panel-default">
+			  <div class="panel-body">
+			  		<h2><u><%= @project.title %></u></h2>
+						<% if @project.provider %>
+							<h3><%= @project.client %> - <i><%= @project.provider %></i></h3>
+						<% else %>
+							<h3><%= @project.client %></h3>
+						<% end %>
+						<p><%= @project.description %></p>
+						<p><%=@project.date %></p>
+						<p><%= @project.link %></p>
+			  </div>
 			</div>
 		</div>
-		<div class="item">
-			<div align="center">
-				<video autoplay muted loop>
-					<source src="http://vectorthree.com/vr3/img/projects/<%= @project.client %>/v3.mp4" width="1024" height="552" type="video/mp4">
-						Your browser does not support the video tag.
-				</video>
-			</div>
-			<div class="carousel-caption">
-				<h3><u><%= @project.title %></u></h3>
-				<h4>Cliente: <%= link_to(@project.client, "http://#{@project.client}.com") %></h4>
-				<!--h4>Agencia: <%= link_to(@project.provider, "http://#{@project.provider}.com") %></h4-->
-				<p><%= @project.description %></p>
-			</div>
-		</div>
-		<!--a class="left carousel-control" role="button" data-slide="prev">
-			<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="right carousel-control" role="button" data-slide="next">
-			<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a-->
 	</div>
 </div>
+
+
+<!-- Contact Section -->
+<section id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading">Contacto</h2>
+        <h3 class="section-subheading text-subtitle-white">Escríbenos aquí, o mándanos un correo a <a href="mailto:info@vr3.io" style="color: #FFBDBE;">info@vr3.io</a></h3>
+        <br/>
+      </div>
+    </div>
+    <div class="row">
+      <form method="post" role="form" id="contact-form" action="http://vectorthree.com/vr3/php/contact.php">
+          <div class="col-md-6 col-md-offset-3">
+            <div class="form-group">
+              <input type="text" name="name" class="form-control" placeholder="Nombre * " id="name" required>
+              <p class="help-block text-danger list-unstyled"></p>
+            </div>
+            <div class="form-group">
+              <input type="email" name="email" class="form-control" placeholder="Correo Electrónico * " id="email" required>
+            </div>
+            <div class="form-group">
+              <select class="form-control" name="option" id="option" required>
+                <option value=" " disabled selected hidden>Interés * </option>
+                <option value="streaming">Soluciones de Streaming Web y VR</option>
+                <option value="vr">Desarrollo de Realidad Virtual</option>
+                <option value="ar">Desarrollo de Realidad Aumentada</option>
+                <option value="commercial">Renta y Activaciones Comerciales</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <select class="form-control" name="budget" id="budget" required>
+                <option value=" " disabled selected hidden>Presupuesto </option>
+                <option value="1">< 10,000 USD</option>
+                <option value="2">10,000 - 30,000 USD</option>
+                <option value="3">> 30,000 USD</option>
+              </select>
+            </div>
+            <!--div class="form-group text-center" style="color: white;">
+              <label class="radio-inline"><strong>Presupuesto:</strong></label>
+              <label class="radio-inline"><input type="radio" name="optradio" value="1">< 10,000 USD</label>
+              <label class="radio-inline"><input type="radio" name="optradio" value="2">10,000 - 30,000 USD</label>
+              <label class="radio-inline"><input type="radio" name="optradio" value="3">> 30,000 USD</label>
+            </div-->
+            <div class="form-group">
+              <textarea type="text" name="message" class="form-control" placeholder="Mensaje *" id="message" required></textarea> 
+            </div>       
+            <div class="g-recaptcha" data-sitekey="6Ld6AR8TAAAAACju2U8T7UsQNRq_GadUYw9HOXnk"></div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" name="legalCheckbox" id="legal-checkbox"><p class="normal-text-white">Al enviar esta forma aceptas el <a href="http://vr3.io/privacy" style="color: #FFBDBE;">Aviso de Privacidad y Términos de Uso</a></p>
+              </label>
+            </div> 
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="alert alert-success" id="contact-form-message" style="display: none;">
+              <p id="contact-form-message-text"></p>
+            </div>
+          </div>
+          <br>
+          <div class="col-sm-12 text-center">
+          <br>
+            <button type="submit" class="btn btn-xl">Enviar</button>
+          </div>
+      </form>
+    </div>
+  </div>
+</section>
