--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -504,6 +504,8 @@ div#full-blue{
 }
 
 header {
+  padding-top: 100px;
+  padding-bottom: 50px;
   text-align: center;
   color: #fff;
   background-attachment: scroll;
@@ -516,7 +518,7 @@ header {
   -o-background-size: cover;
   .intro-text {
     padding-top: 10px;
-    padding-bottom: 100px;
+    padding-bottom: 30px;
     .intro-lead-in {
       margin-bottom: 25px;
       font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -535,22 +537,26 @@ header {
 }
 
 @media (min-width: 768px) {
-  header .intro-text {
+  header{
     padding-top: 150px;
     padding-bottom: 100px;
-    .intro-lead-in {
-      margin-bottom: 25px;
-      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-      font-size: 25px;
-      line-height: 40px;
-    }
-    .intro-heading {
-      margin-bottom: 10px;
-      text-transform: uppercase;
-      font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-      font-size: 50px;
-      font-weight: 700;
-      line-height: 75px;
+    .intro-text {
+      padding-top: 30px;
+      padding-bottom: 30px;
+      .intro-lead-in {
+        margin-bottom: 25px;
+        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 25px;
+        line-height: 40px;
+      }
+      .intro-heading {
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 50px;
+        font-weight: 700;
+        line-height: 75px;
+      }
     }
   }
 }
