--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,3 +1,6 @@
+<div id="projectspage"></div>
+
+<!-- Portfolio Section -->
 <section id="projects">
   <div class="container">
     <div class="row">
@@ -13,11 +16,11 @@
         <%= link_to project_path(p.id) do %>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <%= image_tag "http://vr3.io/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
+              <%= image_tag "projects/#{p.client}/cover.png", :class => "img-responsive"%>
               <!--img class="img-responsive" src="http://placehold.it/350x250" alt="Google"-->
               <div class="caption">
                 <h3><u><%= p.title %></u></h3>
-                <h4>CLiente: <%= p.client %></h4>
+                <h4>Cliente: <%= p.client %></h4>
                 <h5>Agencia: <%= p.provider %></h5>
                 <h5><%= p.date %></h5>
                 <p><%= p.description.truncate(90) %></p>
