--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -238,7 +238,7 @@
         <%= link_to project_path(p.id) do %>
           <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-              <%= image_tag "projects/#{p.client}/cover.png", :class => "img-responsive"%>
+              <%= image_tag "http://vectorthree.com/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
               <!--img class="img-responsive" src="http://placehold.it/350x250" alt="Google"-->
               <div class="caption">
                 <h3><u><%= p.title %></u></h3>
