Create Jobs MVC with their Spec Testing Kit. Update routes

--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -36,6 +36,9 @@
           <li>
             <%= link_to("Nuevo Proyecto", new_project_path , :class=>"btn btn-danger") %>
           </li>
+          <li>
+            <%= link_to("Nuevo Trabajo", new_job_path , :class=>"btn btn-danger") %>
+          </li>
         <% end %>
         <!--li class="dropdown">
           <a href="/company" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Empresa <span class="caret"></span></a>
