--- a/app/views/pages/jobs.html.erb
+++ b/app/views/pages/jobs.html.erb
@@ -7,31 +7,26 @@
 </div>
 <br>
 <div class="container">
-	<div class="row text-center">
-		<h3>Vacantes</h3>
-		<div class="text-center bio">
-			<p>En <strong><%= link_to "VR3", root_path %></strong> siempre estamos buscando mentes creativas. Descubre más sobre las vacantes abiertas.</p>
-		</div>
-		<h1>Por el momento, no hay vacantes abiertas. Vuelve pronto !</h1>
-		<!--div class="col-sm-4 col-md-6 ">
-			<div class="thumbnail">
-	      <div class="caption">
-	        <h3>Sr Web Developer (RoR)</h3>
-	        <p>Increible pasión por el desarrollo web. Especialmente con clientes REST y diseño de APIs.</p>
-	    		<a class="btn btn-lg">Leer más</a>
-	      </div>
-	    </div>
-		</div>
-		<div class="col-sm-4 col-md-6 ">
-			<div class="thumbnail">
-	      <div class="caption">
-	        <h3>Unity3D Developer</h3>
-	        <p>Desde juegos hasta VR/AR. Conocimientos en C#, Js, OpenGL, Sqlite.</p>
-	    		<a class="btn btn-lg">Leer más</a>
-	      </div>
-	    </div>
-		</div-->
-		<br>
-		<br>
-	</div>
+  <div class="row text-center">
+    <h3>Vacantes</h3>
+    <div class="text-center bio">
+      <p>En <strong><%= link_to "VR3", root_path %></strong> siempre estamos buscando mentes creativas. Descubre más sobre las vacantes abiertas.</p>
+    </div>    
+    <% if @jobs %>
+      <%= @jobs.each do |j| %>
+        <div class="col-sm-4 col-md-6">
+          <div class="thumbnail">
+            <div class="caption">
+              <h3><%= j.position %></h3>
+              <p><%= j.overview %></p>
+              <%= link_to "Leer más", job_path(j.id), :class => "btn btn-lg" %>
+            </div>
+          </div>
+        </div>        
+      <% end %>
+    <% else %>
+       <h1>Por el momento, no hay vacantes abiertas. Vuelve pronto !</h1>
+    <% end %>
+
+  </div>
 </div>
