--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,34 +1,32 @@
 <div id="projectspage"></div>
 
-<!-- Portfolio Section -->
-<section id="projects">
+<div id="full-blue">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Proyectos</h2>
-        <!--h3 class="section-subheading normal-text">Lo que hicimos y lo que nos gustó.</h3-->
+    <div class="intro-text">
+      <div class="intro-heading">Proyectos</div>
+    </div>
+  </div>
+</div>
+</br>
+
+<div class="row">
+  <% @projects.each do |p| %>
+  <%= link_to project_path(p.id) do %>
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <%= image_tag "http://vectorthree.com/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
+      <div class="caption">
+        <h3><u><%= p.title %></u></h3>
+        <h4>Cliente: <%= p.client %></h4>
+        <h5>Agencia: <%= p.provider %></h5>
+        <h5><%= p.date %></h5>
+        <p><%= p.description.truncate(90) %></p>
       </div>
     </div>
-    </br>
-
-    <div class="row">
-      <% @projects.each do |p| %>
-        <%= link_to project_path(p.id) do %>
-          <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-              <%= image_tag "http://vectorthree.com/vr3/img/projects/#{p.client}/cover.png", :class => "img-responsive"%>
-              <div class="caption">
-                <h3><u><%= p.title %></u></h3>
-                <h4>Cliente: <%= p.client %></h4>
-                <h5>Agencia: <%= p.provider %></h5>
-                <h5><%= p.date %></h5>
-                <p><%= p.description.truncate(90) %></p>
-              </div>
-            </div>
-          </div>
-        <% end %>
-      <% end %>
-    </div>
-    <br/>
   </div>
+  <% end %>
+  <% end %>
+</div>
+<br/>
+</div>
 </section>
