--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,3 +1,10 @@
+<div id="full-blue">
+  <div class="container">
+    <div class="intro-text">
+      <div class="intro-heading">Proyectos en <%= link_to("VR3", root_path) %></div>
+    </div>
+  </div>
+</div>
 <section>
 	<div class="container">
 		<div class="row text-center">
