Update style on home.html.erb, video header added. Improving responsive design. Added project CRUD support

--- a/app/views/pages/company.html.erb
+++ b/app/views/pages/company.html.erb
@@ -29,9 +29,9 @@
 			<p>RoR. JS. C#. REST/API. SQL</p>
 			<p>Cofundador <%= link_to "MXVR", "http://mxvr.co" %>.</p>
 			<ul class="list-inline social-buttons">
-        <li><a href="http://twitter.com/ostocino" target="_blank"><i class="fa fa-twitter"></i></a>
+        <li><a href="http://twitter.com/oschvr" target="_blank"><i class="fa fa-twitter"></i></a>
         </li>
-        <li><a href="http://instagram.com/ostocino" target="_blank"><i class="fa fa-instagram"></i></a>
+        <li><a href="http://instagram.com/oschvr" target="_blank"><i class="fa fa-instagram"></i></a>
         </li>
       </ul>
 		</div>
