--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,3 +1,4 @@
+
 <footer>
   <div class="container">
     <div class="row">
@@ -28,12 +29,12 @@
         </ul>     
       </div>
     </div>
-    <br/>
+    <hr>
     <div class="row">
-      <div class="col-md-3 col-sm-3">
+      <div class="col-xs-6 col-md-4 col-sm-3">
         <span class="copyright">VR3 © 2017 | <strong>CGL SAPI de CV </strong></span>
       </div>
-      <div class="col-md-3 col-sm-3">
+      <div class="col-xs-6 col-md-2 col-sm-3">
         <ul class="list-inline social-buttons">
           <li>
           <a href="http://twitter.com/vr3io" target="_blank"><i class="fa fa-twitter"></i></a>
@@ -46,12 +47,12 @@
           </li>
         </ul>
       </div>
-      <div class="col-md-3 col-sm-3">
+      <div class="col-xs-8 col-md-4 col-sm-3">
         <ul class="list-inline quicklinks">
           <li><a href="/privacy">Privacidad y Términos de Uso</a></li>
         </ul>
       </div>
-      <div class="col-md-3 col-sm-3">
+      <div class="col-xs-4 col-md-2 col-sm-3">
         <ul class="list-inline quicklinks">
           <% if !user_signed_in? %>
             <li>
